--- a/index.html
+++ b/index.html
@@ -12,18 +12,10 @@
     />
     <link rel="stylesheet" href="./style.css" />
 
-    <title>Frontend Mentor | Profile Card Component</title>
-    <!-- <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style> -->
+    <title>Profile Card Component</title>
   </head>
   <body class="flex-container">
+    <img src="./images/bg-pattern-top.svg" class="bg-image top-pattern" alt="">
     <div class="container flex-container">
       <div class="card flex-container">
         <div class="top-container flex-container">
@@ -54,12 +46,13 @@
       </div>
     </div>
 
-    <!-- Victor Crest 26 London 80K Followers 803K Likes 1.4K Photos
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      >. Coded by
+      <a href="https://github.com/Surayani02" target="_blank">Sur Saha.</a>
+    </div>
+    <img src="./images/bg-pattern-bottom.svg" class="bg-image bottom-pattern" alt="">
   </body>
 </html>
